[package]
name = "granite-4-tiny"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "process", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
